--- a/app/src/main/res/layout/activity_userprofile.xml
+++ b/app/src/main/res/layout/activity_userprofile.xml
@@ -3,8 +3,7 @@
     android:id="@+id/mainlayout_userprofile"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:background="@drawable/userprofilefragmentbackground">
+    android:background="#CDCDCD">
 
     <ScrollView
         android:orientation="vertical" android:layout_width="match_parent"
@@ -21,15 +20,13 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_margin="10dp"
-                android:background="#80CDCDCD">
+                android:background="#FFFFFF">
 
                 <EditText
                     android:hint="&amp; Handle"
-                    android:textColorHint="#FFF"
+                    android:textColorHint="#000"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="#FFF"
                     android:id="@+id/merchant_handle_profile"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="30dp"
@@ -60,7 +57,7 @@
                 <com.ascentsmartwaves.andealr.custom.CustomTextView
                     android:text=""
                     android:id="@+id/merchant_name"
-                    android:textColor="#FFF"
+                    android:textColor="#000"
                     android:layout_below="@id/profileimg"
                     android:layout_marginTop="20dp"
                     android:layout_width="fill_parent"
@@ -79,7 +76,6 @@
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:background="#00CDCDCD"
-                android:layout_margin="10dp"
                 android:orientation="vertical">
 
                 <com.ascentsmartwaves.andealr.custom.CustomTextView
@@ -88,10 +84,10 @@
                     android:layout_height="50dp"
                     android:textSize="10pt"
                     android:paddingLeft="5dp"
-                    android:background="#CC9E9E9E"
+                    android:background="#FFFFFF"
                     android:gravity="center_vertical"
-                    android:layout_marginTop="5dp"
-                    android:textColor="#FFF"
+                    android:layout_marginTop="10dp"
+                    android:textColor="#000"
                     android:text="Email ID"/>
 
                 <com.ascentsmartwaves.andealr.custom.CustomTextView
@@ -100,11 +96,10 @@
                     android:layout_height="50dp"
                     android:text="Mobile No"
                     android:paddingLeft="5dp"
-                    android:background="#CC9E9E9E"
+                    android:background="#FFFFFF"
                     android:gravity="center_vertical"
                     android:textSize="10pt"
-                    android:textColor="#FFF"
-                    android:layout_marginTop="10dp"
+                    android:textColor="#000"
                     android:layout_below="@+id/merchant_email_id_profile"/>
 
 
@@ -114,11 +109,10 @@
                     android:layout_height="50dp"
                     android:text="Alternate No"
                     android:paddingLeft="5dp"
-                    android:background="#CC9E9E9E"
+                    android:background="#FFFFFF"
                     android:gravity="center_vertical"
                     android:textSize="10pt"
-                    android:textColor="#FFF"
-                    android:layout_marginTop="10dp"
+                    android:textColor="#000"
                     android:layout_below="@+id/merchant_email_id_profile"/>
 
 
@@ -129,11 +123,10 @@
                     android:layout_height="50dp"
                     android:text="DOB"
                     android:paddingLeft="5dp"
-                    android:background="#CC9E9E9E"
+                    android:background="#FFFFFF"
                     android:gravity="center_vertical"
                     android:textSize="10pt"
-                    android:textColor="#FFF"
-                    android:layout_marginTop="10dp"
+                    android:textColor="#000"
                     android:layout_below="@+id/merchant_alternateno_profile"/>
 
                 <com.ascentsmartwaves.andealr.custom.CustomTextView
@@ -143,10 +136,9 @@
                     android:text="Gender"
                     android:paddingLeft="5dp"
                     android:gravity="center_vertical"
-                    android:background="#CC9E9E9E"
+                    android:background="#FFFFFF"
                     android:textSize="10pt"
-                    android:textColor="#FFF"
-                    android:layout_marginTop="10dp"
+                    android:textColor="#000"
                     android:layout_marginBottom="5dp"
                     android:layout_below="@+id/merchant_DOB_profile"/>
 
@@ -159,7 +151,6 @@
                 android:visibility="invisible"
                 android:layout_below="@+id/profile_Img_Layout"
                 android:orientation="vertical"
-                android:layout_margin="10dp"
                 android:background="#00CDCDCD"
                 android:layout_height="10dp"
                 android:layout_width="fill_parent">
@@ -273,7 +264,7 @@
                     android:text="Update"
                     android:id="@+id/update_profile_btn"
                     android:background="@color/dealer"
-                    android:textColor="#FFF"
+                    android:textColor="#000"
                     android:onClick="UpdateProfile"
                     android:layout_margin="5dp"
                     android:layout_below="@+id/merchant_gender_user_profile"
