--- a/app/src/main/res/layout/landing_activity.xml
+++ b/app/src/main/res/layout/landing_activity.xml
@@ -28,6 +28,7 @@
                 android:id="@+id/profile_background"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:scaleType="centerCrop"
                 android:layout_alignParentLeft="true"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="15dp"/>
@@ -39,42 +40,10 @@
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textSize="20dp"
-                android:textColor="#000"
+                android:textColor="#FFF"
                 android:layout_marginLeft="35dp"
                 android:layout_marginTop="30dp"
                 />
-
-
-
-            <!--<FrameLayout-->
-                <!--android:id="@+id/likesInterestCounterFL"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_below="@id/profilePicFL"-->
-                <!-->-->
-                <!--<LinearLayout-->
-                    <!--android:id="@+id/likesInterestCounterLL"-->
-                    <!--android:layout_width="fill_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:orientation="horizontal"-->
-                    <!--android:layout_gravity="bottom"-->
-                    <!-->-->
-                    <!--<TextView-->
-                        <!--android:id="@+id/likesCounterTV"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:text="Likes 12"-->
-                        <!--android:padding="10dp"-->
-                        <!--/>-->
-                    <!--<TextView-->
-                        <!--android:id="@+id/interestCounterTV"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:text="Interests 12"-->
-                        <!--android:padding="10dp"-->
-                        <!--/>-->
-                <!--</LinearLayout>-->
-            <!--</FrameLayout>-->
 
         </RelativeLayout>
 
