--- a/app/src/main/res/layout/landing_fragment.xml
+++ b/app/src/main/res/layout/landing_fragment.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ADD"
-        android:src="@drawable/add_image_andelar"
+        android:background="@drawable/add_image_andelar"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:elevation="5dp"
