--- a/app/src/main/res/layout/login_or_register.xml
+++ b/app/src/main/res/layout/login_or_register.xml
@@ -1,65 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fb="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="@drawable/background_register_login"
-    >
-
+    android:background="@drawable/background_register_login">
     <LinearLayout
-        android:id="@+id/login_or_register_linear_layout_login_or_register_activity"
-        android:layout_width="match_parent"
+        android:id="@+id/btnlayout"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="9dp"
         >
 
-        <com.ascentsmartwaves.andealr.custom.CustomButton
-            android:id="@+id/log_in_btn_login_or_register_activity"
+        <com.facebook.widget.LoginButton
+            android:id="@+id/facebook_btn_sign_in_login_or_register_activity"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Log In"
-            android:textSize="18dp"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:background="@drawable/register_login_btn"
-            android:textColor="#FFF"
-            android:layout_margin="@dimen/five_dp"/>
+            android:layout_height="50dp"
+            android:text="Connect with Facebook"
+            fb:login_text="Connect with Facebook"
+            fb:logout_text="Connect with Facebook"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_above="@+id/linearLayout"/>
 
-        <com.ascentsmartwaves.andealr.custom.CustomButton
-            android:id="@+id/register_btn_login_or_register_activity"
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/google_btn_sign_in_login_or_register_activity"
+            android:layout_width="fill_parent"
+            android:layout_height="54dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginBottom="8dp"
+            android:layout_above="@+id/facebook_btn_sign_in_login_or_register_activity"/>
+
+        <com.ascentsmartwaves.andealr.custom.CustomTextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Sign Up"
-            android:textSize="18dp"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:background="@drawable/register_login_btn"
             android:textColor="#FFF"
-            android:layout_margin="@dimen/five_dp"
-            />
+            android:gravity="center"
+            android:text="We will never post anything without your permission"/>
+
+
+
     </LinearLayout>
 
-    <!--<com.ascent.andealr.custom.CustomFacebookButton-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Facbook Connect"-->
-        <!--android:id="@+id/facebook_btn_sign_in_login_or_register_activity"-->
-        <!--android:layout_above="@id/login_or_register_linear_layout_login_or_register_activity"-->
-        <!--android:layout_marginBottom="@dimen/ten_dp"-->
-        <!--android:layout_marginLeft="@dimen/five_dp"-->
-        <!--android:layout_marginRight="@dimen/five_dp"-->
-        <!--/>-->
 
-
-    <!--<com.google.android.gms.common.SignInButton-->
-        <!--android:id="@+id/google_btn_sign_in_login_or_register_activity"-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_above="@id/facebook_btn_sign_in_login_or_register_activity"-->
-        <!--/>-->
 
 
 </RelativeLayout>
