--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -5,4 +5,6 @@
     <color name="tab_color">#FFF</color>
     <color name="textColor">#9e9e9e</color>
 
+    <color name="black">#000</color>
+
 </resources>
