--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,11 +11,20 @@
     <dimen name="ten_dp">10dp</dimen>
     <dimen name="ten_sp">10sp</dimen>
 
+    <dimen name="twelve_dp">12dp</dimen>
+    <dimen name="twelve_sp">12sp</dimen>
+
+    <dimen name="fourteen_dp">14dp</dimen>
+    <dimen name="fourteen_sp">14sp</dimen>
+
     <dimen name="fifteen_dp">15dp</dimen>
     <dimen name="fifteen_sp">15sp</dimen>
 
     <dimen name="sixteen_sp">16sp</dimen>
     <dimen name="sixteen_dp">16dp</dimen>
+
+    <dimen name="eighteen_dp">18dp</dimen>
+    <dimen name="eighteen_sp">18sp</dimen>
 
     <dimen name="twenty_sp">20sp</dimen>
     <dimen name="twenty_dp">20dp</dimen>
