--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,5 +32,8 @@
     <dimen name="twenty_two_sp">22sp</dimen>
     <dimen name="twenty_two_dp">22dp</dimen>
 
+    <dimen name="twenty_four_dp">24sp</dimen>
+    <dimen name="twenty_four_sp">24sp</dimen>
+
 
 </resources>
